tests/e2e/not_allowed/name2.error
Error: syntax error in story at line 1, column 17

1|    http server as s/
                      ^

E0041: `/` is not allowed here
