tests/e2e/not_allowed/name2.story
http server as s/
    when s/ listen path: "/" as r
        r write content: "foobar"
